fixes to layout on mobile

--- a/src/public/assets/css/index.css
+++ b/src/public/assets/css/index.css
@@ -3,5 +3,5 @@
 }
 
 .fill-height {
-	height: calc(100% - 128px);
+	height: 100%;
 }
